fixed image not responsive

--- a/src/person-view/components/PersonView.css
+++ b/src/person-view/components/PersonView.css
@@ -72,7 +72,7 @@
 }
 
 .image {
-  max-width: 300px;
+  max-width: 100%;
   max-height: 300px;
 }
 
@@ -112,7 +112,7 @@
 }
 
 .personDetails__minorInfo {
-  padding: 50px 40px;
+  padding: 50px 30px;
   composes: flexbox-sizing;
   display: flex;
   flex-direction: row;
@@ -132,7 +132,7 @@
 .minorInfo__rowLinks {
   composes: minorInfo__row;
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   color: blue;
 }
 
